k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: descopesampleapp
  namespace: descopesampleapp-prod
  labels:
    app: descopesampleapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: descopesampleapp
